style.css change to fix overlap of difference delta triangle

--- a/style.css
+++ b/style.css
@@ -189,7 +189,6 @@ body {
 }
 .triangle {
     font-size: 150%;
-    display: inline-block;
 }
 .not_inverted {
     transform: rotateX(0deg);
